--- a/ProjectFoodTruck/WebContent/index.html
+++ b/ProjectFoodTruck/WebContent/index.html
@@ -3,6 +3,7 @@
     <head lang="en">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
         <title>Localizador de Food Truck</title>
 
